[gd_scene load_steps=4 format=3 uid="uid://0qbmharabbuv"]

[ext_resource type="Script" path="res://scripts/sun_float.gd" id="1_06r4u"]
[ext_resource type="Texture2D" uid="uid://cg1c8sq5s4mng" path="res://sprites/pvv_sunleaf.png" id="2_7udql"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vsdic"]

[node name="sun_float" type="Node2D"]
z_index = 1000
scale = Vector2(0.9, 0.9)
script = ExtResource("1_06r4u")

[node name="sun_sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_7udql")
hframes = 2
vframes = 2

[node name="sun_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="sun_area"]
shape = SubResource("CircleShape2D_vsdic")

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 15.0
one_shot = true

[connection signal="input_event" from="sun_area" to="." method="_on_sun_area_input_event"]
[connection signal="mouse_entered" from="sun_area" to="." method="_on_sun_area_mouse_entered"]
[connection signal="mouse_exited" from="sun_area" to="." method="_on_sun_area_mouse_exited"]
